--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "react-scroll": "^1.9.3",
-    "react-typed": "^2.0.12"
+    "react-typed": "^2.0.12",
+    "styled-components": "^6.1.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
