--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "axios": "^1.7.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-fontawesome": "^1.7.1",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
-    "react-icons": "^5.4.0",
+    "react-icons": "^5.5.0",
     "react-scroll": "^1.9.3",
     "react-typed": "^2.0.12",
     "styled-components": "^6.1.15"
